Add FindAll, Create, FindOne REST functions

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,8 @@
 <h1>Wellcome to the shop!</h1>
 
 <a th:href="@{/productList}">List of products</a>
+<br>
+<a th:href="@{/rest/}">REST shop</a>
 
 </body>
 </html>
